--- a/style.scss
+++ b/style.scss
@@ -123,7 +123,7 @@ section {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1000;
+  z-index: 10000;
   background: #010102;
   padding: 1rem 9%;
   display: flex;
@@ -425,6 +425,7 @@ section {
   }
 }
 .gallery {
+  overflow-x: hidden;
   h2 {
     @include text(3rem, unset, uppercase, #fff);
     margin: 3rem 0;
