--- a/style.scss
+++ b/style.scss
@@ -467,7 +467,7 @@ section {
     .tp-grid {
       list-style-type: none;
       position: relative;
-      @include grid(10rem);
+      // @include grid(10rem);
       &.no-js li {
         position: relative;
         display: inline-block;
