--- a/style.scss
+++ b/style.scss
@@ -593,10 +593,9 @@ section {
   .gallery {
     padding: 0;
     text-align: center;
-    .gallery-container {
-      display: grid;
-      place-items: center;
-      overflow-x: hidden;
+    img {
+      max-width: 200px;
+      max-height: 100px;
     }
   }
 }
