--- a/style.scss
+++ b/style.scss
@@ -425,6 +425,7 @@ section {
   }
 }
 .gallery {
+  text-align: center;
   h2 {
     @include text(3rem, unset, uppercase, #fff);
     margin: 3rem 0;
@@ -522,6 +523,100 @@ section {
     }
   }
 }
+.blogs {
+  text-align: center;
+  h2 {
+    @include text(3rem, unset, uppercase, #fff);
+    margin: 3rem 0;
+    text-align: center;
+    span {
+      color: #da5c00;
+    }
+  }
+  .blogs-container {
+    @include grid(31rem);
+    img {
+      width: 100%;
+      height: 272px;
+    }
+    .box {
+      text-align: center;
+      margin-bottom: 3rem;
+      display: none;
+      &:nth-child(1),
+      &:nth-child(2),
+      &:nth-child(3) {
+        display: block;
+      }
+      .blog-img {
+        overflow: hidden;
+        cursor: pointer;
+        &:hover img {
+          transform: scale(1.1);
+        }
+      }
+      .content {
+        h3 {
+          @include text(1.8rem, unset, capitalize, #fff);
+          margin: 2rem 0;
+        }
+        p {
+          @include text(1.5rem, 3rem, capitalize, gray);
+          margin-bottom: 2rem;
+        }
+        .icons {
+          width: 100%;
+
+          margin-top: 2rem;
+          background: #111;
+          display: flex;
+          justify-content: space-between;
+          padding: 1rem;
+          a {
+            @include text(1.4rem, unset, capitalize, #fff);
+            i {
+              font-size: 2rem;
+              padding-right: 5px;
+              color: #da5c00;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+.contact {
+  h2 {
+    @include text(3rem, unset, uppercase, #fff);
+    margin: 3rem 0;
+    text-align: center;
+    span {
+      color: #da5c00;
+    }
+  }
+  form {
+    max-width: 60rem;
+    margin: 1rem auto;
+    text-align: center;
+    input,
+    textarea {
+      width: 100%;
+      padding: 1.5rem 0;
+      background: none;
+      color: white;
+      font-size: 1.8rem;
+      border-bottom: $border;
+      margin-bottom: 1rem;
+      &:focus {
+        border-color: #da5c00;
+      }
+    }
+    textarea {
+      resize: none;
+      height: 15rem;
+    }
+  }
+}
 @media only screen and (max-width: 991px) {
   html {
     font-size: 55%;
@@ -592,10 +687,5 @@ section {
   }
   .gallery {
     padding: 0;
-    text-align: center;
-    img {
-      max-width: 200px;
-      max-height: 100px;
-    }
   }
 }
