--- a/style.scss
+++ b/style.scss
@@ -117,7 +117,28 @@ section {
   line-height: $text-hight;
   text-transform: $text-transform;
 }
-
+.preloader {
+  width: 100%;
+  height: 100vh;
+  background: #fff;
+  display: flex;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 2000;
+  justify-content: center;
+  align-items: center;
+  &.disppear {
+    animation: disppear 0.5s forwards;
+    animation-delay: 3s;
+  }
+}
+@keyframes disppear {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
 .header {
   position: fixed;
   top: 0;
@@ -285,6 +306,7 @@ section {
     z-index: 12;
   }
 }
+
 .about {
   width: 100%;
   height: fit-content;
@@ -462,7 +484,7 @@ section {
         cursor: pointer;
         display: none;
         user-select: none;
-        font-size: 2rem;
+        font-size: 3rem;
       }
     }
     .tp-grid {
@@ -614,6 +636,90 @@ section {
     textarea {
       resize: none;
       height: 15rem;
+    }
+  }
+}
+.footer {
+  padding: 3rem 9%;
+  background: #111;
+  overflow-x: hidden;
+  .footer-container {
+    overflow: hidden;
+    @include grid(20rem);
+    .box {
+      h3 {
+        @include text(2.4rem, unset, capitalize, #fff);
+        margin-bottom: 2rem;
+      }
+      .btn {
+        background: #fff;
+        border-radius: 10px;
+        cursor: pointer;
+        opacity: 0.9;
+        color: #000;
+        &:after {
+          background: #fff;
+        }
+      }
+      a {
+        @include text(1.8rem, unset, capitalize, #fff);
+        display: block;
+        margin-bottom: 20px;
+        &:hover {
+          color: #da5c00;
+          i {
+            padding-right: 10px;
+          }
+        }
+        i {
+          padding-right: 5px;
+          color: #da5c00;
+        }
+      }
+      input {
+        width: 100%;
+        padding: 1.5rem 0;
+        background: none;
+        color: white;
+        font-size: 1.8rem;
+        border-bottom: $border;
+        margin-bottom: 1rem;
+        &:focus {
+          border-color: #da5c00;
+        }
+      }
+      .socila-icon {
+        display: flex;
+        margin-top: 2rem;
+        gap: 1rem;
+        a {
+          width: 50px;
+          height: 50px;
+          background: #fff;
+          color: #000;
+          text-align: center;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-size: 2rem;
+          &:hover {
+            background: #da5c00;
+          }
+        }
+      }
+    }
+  }
+  .credit {
+    color: #fff;
+    width: 100%;
+    border-top: $border;
+    text-align: center;
+    padding-top: 2rem;
+    font-size: 2rem;
+    span {
+      &:nth-child(2) {
+        color: #da5c00;
+      }
     }
   }
 }
